basic js and css

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <script src="index.js"></script>
   <title>The Elias Net</title>
 </head>
 <body>
-  <main class="flex">
-    <article id="terminal" class="centered">
-      <h1 class="typing">Welcome to The Elias Net</h1>
-      <section class="flex flex-grow">
-        <div id="input">
-          <p id="prompt">154-TA-site-24au eliasbelzberg$</p>
-          <input type="text" autofocus>
-        </div>
-      </section>
-    </article>
+  <main id="terminal" class="flex column">
+    <h1>Welcome to The Elias Net</h1>
+    <section class="flex flex-grow column flex-between">
+      <nav id="main-terminal">
+      </nav>
+      <div id="input">
+        <p id="prompt">154-TA-site-24au eliasbelzberg % </p>
+        <input type="text" autofocus>
+      </div>
+    </section>
   </main>
 </body>
 </html>
