--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <script src="index.js"></script>
+  <script src="terminal.js"></script>
   <title>The Elias Net</title>
 </head>
 <body>
+  <!-- Sneaky you looking at the code -->
   <main id="terminal" class="flex column">
     <h1>Welcome to The Elias Net</h1>
-    <section class="flex flex-grow column flex-between">
-      <nav id="main-terminal">
+    <section class="flex flex-grow column flex-start">
+      <nav id="terminal-nav">
       </nav>
-      <div id="input">
-        <p id="prompt">154-TA-site-24au eliasbelzberg % </p>
-        <input type="text" autofocus>
-      </div>
+      <section id="terminal-output">
+        <form id="input">
+          <p></p>
+          <input type="text" class="white" autofocus>
+        </form>
+      </section>
     </section>
   </main>
 </body>
