--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <!-- Sneaky you looking at the code -->
+   <!-- Hi Kasten -->
   <main id="terminal" class="flex column flex-start flex-grow">
     <nav id="terminal-nav">
     </nav>
