I think were done

--- a/snake.html
+++ b/snake.html
@@ -23,7 +23,7 @@
           <form>
             <div>
               <label for="initials">initials:</label>
-              <input type="text" id="initials" initials="initials" maxlength="3" required>
+              <input type="text" id="initials" initials="initials" placeholder="3 characters" maxlength="3" required>
             </div>
             <button type="submit">Submit</button>
           </form>
