--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="styles.css">
   <script src="index.js" type="module"></script>
   <script src="terminal.js" type="module"></script>
+  <link rel="icon" href="favicon.png">
   <title>The Elias Net</title>
 </head>
 <body>
