--- a/snake.html
+++ b/snake.html
@@ -5,6 +5,7 @@
   <script src="snake.js" type="module"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="favicon.png">
   <title>Snake!</title>
 </head>
 <body>
